# rusty-buddy

./: .gitignore  404.html  Cargo.toml  Gemfile  LICENSE  README.md  _config.yml  download.markdown  extracted_content.txt  getting-started.markdown  index.markdown
.github/workflows/: ci.yml  deploydocs.yml  jekyll.yml
.test_storage1/: test_session.json
_includes/: footer.html  header.html
_posts/: 2024-10-03-experience-autocomplete.md
_sass/: _dark.scss  _hacker.scss  _light.scss  base.scss
assets/: main-dark.scss  main-hacker.scss  main-light.scss  main.scss
cli/: Cargo.toml
cli/src/: args.rs  main.rs
cli/src/cli/: slash_completer.rs  spinner.rs
cli/src/cli/chat/: chat_args.rs  mod.rs  run.rs
cli/src/cli/chat/commands/: copy_files.rs  copy_last_answer.rs  message_files.rs  mod.rs  save_files.rs  save_last_answer.rs
cli/src/cli/commitmessage/: cm_args.rs  mod.rs  run.rs
cli/src/cli/createbackground/: bg_args.rs  run.rs
cli/src/cli/createicon/: ci_args.rs  mod.rs  run.rs
cli/src/cli/editor/: filename_input_editor.rs  mod.rs  multiline_editor.rs  password_input_editor.rs
cli/src/cli/init/: init_args.rs  mod.rs
cli/src/cli/knowledge/: add.rs  init.rs  mod.rs  search.rs
cli/src/cli/wish/: mod.rs  run.rs
crates/rbchat/: Cargo.toml
crates/rbchat/src/: lib.rs
crates/rbchat/src/chat/: command.rs  command_registry.rs  file_storage.rs  interface.rs  message_helpers.rs  mod.rs  service.rs  service_builder.rs
crates/rbchat/src/chat/commands/: mod.rs  refresh.rs
crates/rbchat/src/config/: config_file.rs  mod.rs
crates/rbchat/src/context/: mod.rs
crates/rbchat/src/image/: mod.rs
crates/rbchat/src/knowledge/: interface.rs  store_builder.rs  store_impl.rs
crates/rbchat/src/persona/: mod.rs
crates/rbchat/src/provider/: mod.rs
crates/rbchat/src/provider/ollama/: mod.rs  ollama_interface.rs
crates/rbchat/src/provider/openai/: file_diff.rs  mod.rs  openai_interface.rs
docs/: mkdocs.yml
docs/docs/: commands.md  configuration.md  getting_started.md  index.md  installation.md  personas.md
docs/docs/usecases/: assisted_debugging.md  case_study_rest.md  case_study_rust.md  code_refactoring.md  dynamic_config_automation.md  security_audit.md  start_for_free.md  test_cases.md  using_knowledge_feature.md  write_documentation.md
src/: args.rs  main.rs
src/chat/: command.rs  command_registry.rs  context.rs  file_storage.rs  interface.rs  message_helpers.rs  mod.rs  service.rs  service_builder.rs  service_p.rs
src/chat/commands/: copy_files.rs  copy_last_answer.rs  message_files.rs  mod.rs  refresh.rs  save_files.rs  save_last_answer.rs
src/cli/: chat.rs  createicon.rs  mod.rs  slash_completer.rs  spinner.rs  style.rs  utils.rs  wish.rs
src/cli/chat/: chat.rs  chat_args.rs  mod.rs  run.rs  run_p.rs
src/cli/commitmessage/: cm_args.rs  commitmessage.rs  mod.rs  run.rs
src/cli/createbackground/: bg_args.rs  createbackground.rs  mod.rs  run.rs
src/cli/createicon/: ci_args.rs  mod.rs  run.rs
src/cli/editor/: filename_input_editor.rs  mod.rs  multiline_editor.rs  password_input_editor.rs  user_input_editor.rs
src/cli/init/: mod.rs
src/cli/knowledge/: add.rs  init.rs  knowledge_args.rs  mod.rs  run.rs  search.rs
src/cli/wish/: mod.rs  run.rs  wish.rs  wish_args.rs
src/config/: config.rs  config_file.rs  mod.rs
src/context/: mod.rs
src/knowledge/: embedding_service_builder.rs  interface.rs  mod.rs  store_builder.rs  store_impl.rs
src/openai_api/: file_diff.rs  openai_interface.rs
src/persona/: mod.rs  persona.rs
src/provider/: mod.rs
src/provider/ollama/: mod.rs  ollama_interface.rs
src/provider/openai/: mod.rs  openai_interface.rs
tests/mock_dirs/dir2/: mock_file3.rs
tests/mocks/: mock_file.rs
