[package]
name = "rusty-buddy"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.24.0"
dotenvy = "0.15.7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2.5.0"
tempfile = "3.13.0"
termimad = "0.30"
rustyline = "14.0"
toml = "0.8"
lazy_static = "1.5"
image = "0.25"
base64 = "0.22"
regex = "1.11"
atty = "0.2"
tempdir = "0.3.7"