[package]
name = "rusty-buddy"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.25.0"
dotenvy = "0.15.7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2.5.0"
tempfile = "3.13.0"
termimad = "0.30"
rustyline = { version = "14.0", features = ["derive"] }
unicode-width = "0.2"
toml = "0.8"
lazy_static = "1.5"
image = "0.25"
base64 = "0.22"
regex = "1.11"
atty = "0.2"
ignore = "0.4"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
ollama-rs = { version = "0.2", features = ["stream"] }
chrono = { version = "0.4", features = ["serde"]}
chrono-tz = "0.10"
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }
async-channel = "2.3"
fern = "0.6"
arboard = "3.4"
