[package]
name = "rusty-buddy"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbchat = { path = "../crates/rbchat" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dotenvy = "0.15.7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
termimad = "0.31"
rustyline = { version = "14.0", features = ["derive"] }
unicode-width = "0.2"
atty = "0.2"
log = "0.4"
env_logger = "0.11"
async-channel = "2.3"
fern = "0.7"
image = "0.25"
ignore = "0.4"
walkdir = "2.5.0"
tempfile = "3.14.0"
reqwest = "0.12"
chrono = { version = "0.4", features = ["serde"]}
arboard = "3.4"
regex = "1.11"
