[package]
name = "rbchat"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
chrono-tz = "0.10"
log = "0.4"
ignore = "0.4"
walkdir = "2.5.0"
tempfile = "3.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
ollama-rs = { version = "0.2", features = ["stream"] }
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dotenvy = "0.15.7"
toml = "0.8"
lazy_static = "1.5"
async-openai = "0.25.0"
base64 = "0.22"
