[package]
name = "rbchat"
version = "0.2.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
ignore = "0.4"
tempfile = "3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
ollama-rs = { version = "0.2", features = ["stream"] }
surrealdb = { version = "2.2", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
toml = "0.8"
lazy_static = "1.5"
async-openai = "0.28"
base64 = "0.22"
