[package]
name = "rbchat"
version = "0.3.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
ignore = "0.4"
tempfile = "3.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
ollama-rs = { version = "0.3", features = ["stream"] }
surrealdb = { version = "3.0", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
toml = "1.1"
lazy_static = "1.5"
async-openai = { version = "0.34", features = ["chat-completion", "image", "embedding"] }
base64 = "0.22"
